<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>android-sdk</artifactId>
	<groupId>com.mobeelizer</groupId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Mobeelizer SDK</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android-test</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.1.3</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpcore</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<show>public</show>
					<doctitle>Mobeelizer Android SDK</doctitle>
					<notree>true</notree>
					<nohelp>true</nohelp>
					<noindex>true</noindex>
					<use>false</use>
					<packagesheader><![CDATA[<a href="http://www.mobeelizer.com"><img src="http://unbouncepages-com.s3.amazonaws.com/www.mobeelizer.com/mobeelizer.original.jpg" /></a>]]></packagesheader>
					<bottom><![CDATA[Copyright &#169; 2011-{currentYear} <a href="http://www.mobeelizer.com" target="_blank">Mobeelizer Ltd</a>. All Rights Reserved.]]></bottom>
					<excludePackageNames>com.mobeelizer.mobile.android.model:com.mobeelizer.mobile.android.search:com.mobeelizer.mobile.android.types:com.mobeelizer.mobile.android.sync:com.mobeelizer.mobile.android.definition</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<execution>
						<id>deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
		          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
		        </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.5</version>
				<configuration>
					<artifactSet>
						<excludes>
							<exclude>junit:junit</exclude>
						</excludes>
					</artifactSet>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<id>conjars</id>
			<url>http://conjars.org/repo/</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>deploy-to-amazon</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.7</version>
						<configuration>
							<target>
								<taskdef name="s3upload" classname="dak.ant.taskdefs.S3Upload"
									classpathref="maven.plugin.classpath" />
								<copy
									file="${basedir}/target/${project.artifactId}-${project.version}.jar"
									tofile="${basedir}/target/mobeelizer-android-sdk.jar" />
								<copy
									file="${basedir}/target/${project.artifactId}-${project.version}-javadoc.jar"
									tofile="${basedir}/target/mobeelizer-android-sdk-javadoc.jar" />
								<s3upload verbose="true" accessId="${accessId}"
									secretKey="${secretKey}" bucket="sdk.mobeelizer.com"
									publicRead="true">
									<fileset dir="${basedir}/target/" includes="mobeelizer-*.jar" />
								</s3upload>
								<s3upload verbose="true" accessId="${accessId}"
									secretKey="${secretKey}" bucket="sdk.mobeelizer.com"
									publicRead="true" prefix="android/">
									<fileset dir="${basedir}/target/apidocs/" includes="**/*" />
								</s3upload>
							</target>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>thirdparty</groupId>
								<artifactId>awstasks</artifactId>
								<version>0.3</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<phase>install</phase>
								<goals>
									<goal>run</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

</project>
